force-app/main/default/objects/clariti__Document_Template__c/clariti__Document_Template__c.object-meta.xml
<CustomObject>
    <label>Document Template</label>
    <nameField>
        <label>Document Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>