force-app/main/default/objects/clariti__Document_Template__c/fields/AVO_Compliance_Is_Consent_Order__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance_Is_Consent_Order__c</fullName>
    <label>Compliance Is Consent Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>