force-app/main/default/objects/clariti__Document_Template__c/fields/AVO_Compliance_Merge_Field_Object__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance_Merge_Field_Object__c</fullName>
    <label>Compliance Merge Field Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>