force-app/main/default/objects/clariti__Document_Template__c/fields/AVO_Compliance_NOV_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance_NOV_Type__c</fullName>
    <label>Compliance NOV Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GW</fullName>
            </value>
            <value>
                <fullName>Meter Tampering</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>Undocumented Groundwater ACRES</fullName>
            </value>
            <value>
                <fullName>Undocumented Groiundwater</fullName>
            </value>
            <value>
                <fullName>Undocumented Surface water Acres</fullName>
            </value>
            <value>
                <fullName>Undcoumented surface water</fullName>
            </value>
            <value>
                <fullName>Unpermitted Groundwater Excess Acres</fullName>
            </value>
            <value>
                <fullName>Unpermitted Groundwater Use</fullName>
            </value>
            <value>
                <fullName>WTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>