force-app/main/default/objects/clariti__Document_Template__c/fields/AVO_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Initialised</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Tracking</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>