force-app/main/default/objects/clariti__Document_Template__c/fields/AVO_Compliance_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance_Type__c</fullName>
    <label>Compliance Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Case</fullName>
            </value>
            <value>
                <fullName>Farmer Initiated Online Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>