force-app/main/default/objects/clariti__Document_Template__c/fields/clariti__Active__c.field-meta.xml
<CustomField>
    <fullName>clariti__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>