force-app/main/default/objects/clariti__Document_Template__c/fields/clariti__Application_Phases__c.field-meta.xml
<CustomField>
    <fullName>clariti__Application_Phases__c</fullName>
    <label>Application Phases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Application_Phases</valueSetName>
    </valueSet>
</CustomField>