force-app/main/default/objects/clariti__Document_Template__c/fields/clariti__Complaint_Types__c.field-meta.xml
<CustomField>
    <fullName>clariti__Complaint_Types__c</fullName>
    <label>Complaint Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Complaint_Types</valueSetName>
    </valueSet>
</CustomField>