force-app/main/default/objects/clariti__Document_Template__c/fields/clariti__Document_Type__c.field-meta.xml
<CustomField>
    <fullName>clariti__Document_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Type</label>
    <referenceTo>BGBL__Batch_Letter__c</referenceTo>
    <relationshipLabel>Document Templates</relationshipLabel>
    <relationshipName>Document_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>