force-app/main/default/objects/clariti__Document_Template__c/fields/clariti__Filter_Mapping__c.field-meta.xml
<CustomField>
    <fullName>clariti__Filter_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filter Mapping</label>
    <referenceTo>MUSW__Template_Object_Mapping__c</referenceTo>
    <relationshipLabel>Document Templates</relationshipLabel>
    <relationshipName>Document_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>