force-app/main/default/objects/clariti__Document_Template__c/fields/clariti__Object_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>clariti__Object_Record_Types__c</fullName>
    <label>Object Record Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Object_Record_Types</valueSetName>
    </valueSet>
</CustomField>