force-app/main/default/objects/clariti__Document_Template__c/fields/clariti__Permit_Phases__c.field-meta.xml
<CustomField>
    <fullName>clariti__Permit_Phases__c</fullName>
    <label>Permit Phases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Permit_Phases</valueSetName>
    </valueSet>
</CustomField>