force-app/main/default/objects/clariti__Document_Template__c/fields/clariti__Permit_Statuses__c.field-meta.xml
<CustomField>
    <fullName>clariti__Permit_Statuses__c</fullName>
    <label>Permit Statuses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Permit_Statuses</valueSetName>
    </valueSet>
</CustomField>