force-app/main/default/objects/clariti__Document_Template__c/recordTypes/clariti__Application_Document.recordType-meta.xml
<RecordType>
    <fullName>clariti__Application_Document</fullName>
    <active>true</active>
    <label>Application Document</label>
</RecordType>