force-app/main/default/objects/clariti__Document_Template__c/recordTypes/clariti__Complaint_Document.recordType-meta.xml
<RecordType>
    <fullName>clariti__Complaint_Document</fullName>
    <active>true</active>
    <label>Complaint Document</label>
</RecordType>