force-app/main/default/objects/clariti__Document_Template__c/recordTypes/clariti__License_Document.recordType-meta.xml
<RecordType>
    <fullName>clariti__License_Document</fullName>
    <active>true</active>
    <label>License Document</label>
</RecordType>