force-app/main/default/objects/clariti__Document_Template__c/recordTypes/clariti__Permit_Document.recordType-meta.xml
<RecordType>
    <fullName>clariti__Permit_Document</fullName>
    <active>true</active>
    <label>Permit Document</label>
</RecordType>