force-app/main/default/objects/clariti__Document_Template__c/recordTypes/clariti__Project_Document.recordType-meta.xml
<RecordType>
    <fullName>clariti__Project_Document</fullName>
    <active>true</active>
    <label>Project Document</label>
</RecordType>