force-app/main/default/objects/clariti__Document_Template__c/recordTypes/Compliance_Document.recordType-meta.xml
<RecordType>
    <fullName>Compliance_Document</fullName>
    <active>true</active>
    <label>Compliance Document</label>
</RecordType>