force-app/main/default/objects/clariti__Document_Template__c/listViews/clariti__All.listView-meta.xml
<ListView>
    <fullName>clariti__All</fullName>
    <columns>NAME</columns>
    <columns>clariti__Document_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clariti__Object_Types__c</columns>
    <columns>clariti__Object_Record_Types__c</columns>
    <columns>clariti__Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>